<resources>
    <string name="app_name">Bobo</string>
    <string name="first_name">First Name</string>
    <string name="age">dd</string>
    <string name="second_name">Last Name</string>
    <string name="continue1">Continue</string>
    <string name="emergency_contact_email">Emergency Contact Email</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="please_enter_emergency_contact_details_below">Please enter emergency contact details below.</string>
    <string name="formText1">Please enter your details in the fields below</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="dd">dd</string>
    <string name="mm">mm</string>
    <string name="yyyy">yyyy</string>
</resources>
