<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="180dp"
        android:layout_height="45sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:id="@+id/lastName"
        android:hint="@string/second_name"
        android:layout_below="@+id/firstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@layout/edit_text_border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:ems="10"
        android:layout_below="@+id/emerConName"
        android:layout_alignLeft="@+id/emerConName"
        android:layout_alignStart="@+id/emerConName"
        android:layout_marginTop="15dp"
        android:id="@+id/emerConEmail"
        android:hint="@string/emergency_contact_email"
        android:inputType="textEmailAddress"
        android:background="@layout/edit_text_border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="25dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/please_enter_emergency_contact_details_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/lastName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/emerConName"
        android:hint="@string/emergency_contact_name"
        android:background="@layout/edit_text_border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:layout_marginRight="25dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:text="@string/continue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/continueBtn"
        android:layout_below="@+id/emerConEmail"
        android:layout_alignLeft="@+id/emerConEmail"
        android:layout_alignStart="@+id/emerConEmail"
        android:layout_marginTop="49dp"
        android:layout_alignRight="@+id/emerConEmail"
        android:layout_alignEnd="@+id/emerConEmail"
        android:textColor="@color/authui_inputTextColor"
        android:background="@color/colorPrimary" />

    <TextView
        android:text="@string/formText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ProgressBar
        android:id="@+id/progressBar3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="45sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstName"
        android:layout_marginTop="30dp"
        android:hint="@string/first_name"
        android:background="@layout/edit_text_border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName" />

    <EditText
        android:id="@+id/day"
        android:layout_width="40dp"
        android:layout_height="45sp"
        android:ems="10"
        android:inputType="number"
        android:hint="dd"
        android:textAlignment="center"
        android:maxLength="2"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_alignTop="@+id/firstName"
        android:layout_toRightOf="@+id/firstName"
        android:layout_toEndOf="@+id/firstName" />

    <EditText
        android:id="@+id/month"
        android:layout_width="40dp"
        android:layout_height="45sp"
        android:ems="10"
        android:inputType="number"
        android:hint="mm"
        android:textAlignment="center"
        android:maxLength="2"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="18dp"
        android:layout_alignBottom="@+id/day"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignTop="@+id/day"
        android:layout_marginLeft="3dp"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="40dp"
        android:layout_height="45sp"
        android:ems="10"
        android:inputType="number"
        android:hint="yy"
        android:textAlignment="center"
        android:maxLength="2"
        android:layout_alignBottom="@+id/firstName"
        android:layout_alignRight="@+id/emerConName"
        android:layout_alignEnd="@+id/emerConName"
        android:layout_alignTop="@+id/month"
        android:paddingLeft="3dp"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/day"
        android:layout_toLeftOf="@+id/year"
        android:layout_toStartOf="@+id/year"
        android:text="Date of Birth:" />

</RelativeLayout>